CMF 1.6.2-beta (unreleased)

  Bug Fixes

    - CMFCore.PortalContent:  '_guessAliases' may leave type information
      with a default alias of '(Default)';  work around that case.
      (http://www.zope.org/Collectors/CMF/445)

    - standard_error_message.pt was out of sync with Zope.
      (http://www.zope.org/Collectors/Zope/2133)


CMF 1.6.1 (2006/06/09)

  Other

    - Updated GenericSetup to trunk at revision 68556


CMF 1.6.1-beta (2006/06/03)

  Bug Fixes

    - Forward-ported fix for DCWorkflow global actions missing IDs
      (http://www.zope.org/Collectors/CMF/308).

    - CMFCore Expression: Fixed 'request' provided by expression contexts.
      'request' was not set correctly if 'object' is not specified.

    - CMFCore.interfaces._tools: Corrected the API given for 
      WorkflowDefinition.isActionSupported.
      (http://www.zope.org/Collectors/CMF/407)

    - IndexableObjectWrapper: Fixed list of provided interfaces.
      The interfaces declared for the wrapped object are no longer masked.

    - Got rid of zLOG in favor of python's logging module.


CMF 1.6.0 (2006/02/26)

  Bug Fixes

    - Correct software dependencies in INSTALL.txt


CMF 1.6.0-beta (2006/02/19)

  Bug Fixes

    - Removed BBBTransaction class from CMFCore.utils

    - Extension profiles: Fixed import of actions, now they don't
      overwrite all previous actions in the action provider. Fixed
      import of action icons.

  Features

    - CMFCore.FSDTMLMethod/FSImage/FSFile: Added 304 Not Modified support
      analogous to the support added for FSPageTemplates earlier on.
      (http://www.zope.org/Collectors/CMF/402)

    - Replaced Z2 interfaces w/ Z3 interfaces, dynamically creating Z2
      interfaces via bridge

    - Back-ported the GenericSetup style of site creation from CMF trunk

    - FSFile: autodetect the encoding of UTF-8 text files with a
      suitable Byte Order Mark (0xEF 0xBB 0xBF).

    - CMFSetup: Split off GenericSetup.